# onre-sol

./: .dockerignore  .env_example  .gitignore  .prettierrc  Anchor.toml  CLAUDE.md  COVERAGE.md  Cargo.toml  Dockerfile  LICENSE.md  Makefile  PRICING_MODEL_GRAPHS.md  PROP_AMM_REVIEW_FINDINGS.md  README.md  docker-compose.yml  jest.config.js  oNRELqyUwnaUT8FneFrp6WXWsNF5DNi3Ncjv3MdFqJb.json  package-lock.json  package.json  pnpm-lock.yaml  rustfmt.toml  test_bn.js  test_debug_return_data.js  test_environment.js  token_messenger_minter.ts  tsconfig.app.json  tsconfig.json  tsconfig.test.json  vitest.config.ts
programs/onreapp/: Cargo.toml
programs/onreapp/examples/: prop_amm_business_scenarios.rs
programs/onreapp/src/: constants.rs  errors.rs  lib.rs  program_id.rs  state.rs  test.rs
programs/onreapp/src/contexts/: mod.rs  offer_context.rs
programs/onreapp/src/instructions/: close_offer.rs  get_apy.rs  get_circulating_supply.rs  get_current_offer.rs  get_nav.rs  initialize.rs  initialize_offers.rs  make_offer.rs  mod.rs  pricing.rs  set_boss.rs  take_offer.rs  take_offer_one_permissionless.rs  validations.rs
programs/onreapp/src/instructions/admin/: add_admin.rs  mod.rs  remove_admin.rs
programs/onreapp/src/instructions/approval/: mod.rs  set_trusted.rs
programs/onreapp/src/instructions/boss/: close_offer.rs  initialize_admin_state.rs  initialize_program_authority.rs  mod.rs  remove_all_admins.rs
programs/onreapp/src/instructions/buffer/: errors.rs  (+17 more)
programs/onreapp/src/utils/: account_init.rs  ed25519_parser.rs  math_utils.rs  mod.rs  token_utils.rs
programs/onreapp/tests/: add_admin.rs  add_offer_vector.rs  buffer.rs  cache.rs  close_state.rs  configure_max_supply.rs  delete_all_offer_vectors.rs  delete_offer_vector.rs  fee_routing.rs  initialize.rs  make_offer.rs  market_info.rs  mint_authority.rs  partial_redemption.rs  prop_amm.rs  redemption.rs  set_onyc_mint.rs  state_operations.rs  take_offer.rs  take_offer_permissionless.rs  update_offer_fee.rs  vault_operations.rs
programs/onreapp/tests/common/: basics.rs  builders_buffer.rs  builders_configurable_vault.rs  builders_offer.rs  builders_program.rs  builders_redemption.rs  ed25519.rs  mod.rs  readers.rs  svm.rs  token_accounts.rs
(+517 files in other folders)
