[package]
name = "onreapp"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "onreapp"

[features]
default = ["no-idl"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
bytemuck = { version = "1.24.0", features = ["min_const_generics"] }
bincode = "1.3.3"
solana-program = "2.3"
spl-token-2022 = { version = "10.0.0", features = ["no-entrypoint"] }

[dev-dependencies]
litesvm = "0.7"
solana-sdk = "2.3"