[package]
name = "onreapp"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "onreapp"

[features]
default = ["no-idl"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []
mainnet-test = []
devnet-test = []
devnet-dev = []



[dependencies]
anchor-lang = { version = "1.0.0", features = ["init-if-needed"] }
anchor-spl = "1.0.0"
bytemuck = { version = "1.24.0", features = ["min_const_generics"] }
cfg-if = "1.0.4"
solana-program = "4.0.0"
solana-instructions-sysvar = "3.0.0"
spl-token-2022 = { version = "10.0.0", features = ["no-entrypoint"] }

[dev-dependencies]
litesvm = { version = "0.10.0", features = ["precompiles", "register-tracing"] }
solana-compute-budget-interface = "3.0.0"
solana-sdk = "3.0.0"
